--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,11 @@ scikit-learn = "^1.5.0"
 sentence-transformers = "^3.0.1"
 numpy = "^1.26.4"
 evaluate = "^0.4.2"
+cohere = "^5.5.8"
+sentencepiece = "^0.2.0"
+matplotlib = "^3.9.0"
+dask = "^2024.6.0"
+dask-ml = "^2024.4.4"
 
 [tool.poetry.dev-dependencies]
 
