--- a/semantic-search-fastapi/.env
+++ b/semantic-search-fastapi/.env
@@ -1,2 +1,3 @@
-OPENAI_API_KEY=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
-PINECONE_API_KEY=97aab1fa-afee-4e7a-9a2b-91965192d042
+OPENAI_API_KEY=
+PINECONE_API_KEY=
+COHERE_API_KEY=
